# lekiwi-jetson-orin

./: .gitignore  .gitmodules  README.md
.memory/: MEMORY.md  agent-voice-pages-plan.md  board-account-jetson.md  board-memory-ceiling.md  board-sudo-keychain.md  commit-discipline.md  delegate-to-opus-agents.md  drive-mcp-skill.md  hermes-brain-switch-probe.md  hermes-voice-agent-plan.md  imu-closed-loop-drive-plan.md  jetpack-version-choice.md  jetson-apt-network-cn.md  jetson-platform-baseline.md  jetson-wifi-ax210.md  lekiwi-gui-tauri.md  lekiwi-pad-teleop.md  lekiwi-robot-target.md  lerobot-installed-orin.md  rdk-gs130wi-camera.md  ros2-humble-installed.md  ros2-integration-plan.md  servo-bus-ch341-bringup.md  unit-tests-board.md  vlm-stack-orin.md  voice-asr-engines.md  voice-frontend-s2.md  voice-tts-upgrade.md  voice-venv-dual-sherpa113.md
board/: config.example.json
docs/: agent-voice-pages-plan.html  hermes-lekiwi-voice-agent-plan.html  hermes-s1-install.html  imu-closed-loop-drive.html  lekiwi-gamepad-controls.html  lekiwi-orin-teleop-plan.html  lekiwi-playbook.html  orin-nano-super-install.html  orin-wifi6e-ax210-install.html  ros2-humble-install.html  ros2-integration-plan.html  sc132gs-jetson-csi-port.html  voice-asr-tts-engines.html
drive/: mcp_server.py
gui/: .gitignore  README.md  config.example.json  init.sh  run.sh
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: main.rs
notebooks/: lekiwi-manual-test.ipynb
scripts/: deploy_board.sh  setup_board.sh
tests/: conftest.py  test_base_host.py  test_cam_gates.py  test_drive_imu.py  test_ld19.py  test_motion_controller.py  test_vlm_models.py  test_voice_asr_obs.py  test_voice_brain.py  test_voice_config.py  test_voice_engines.py  test_voice_switching.py  test_voice_vad.py
vlm/: .gitignore  README.md  daemon.py  install.sh  mcp_server.py  pyproject.toml  vlm_models.py
voice/: daemon.py  setup.sh  voice_asr_obs.py  voice_audio.py  voice_brain.py  voice_config.py  voice_engines.py  (+3 more)
(+61 files in other folders)
