[package]
name = "lekiwi-console"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pure-Rust ZeroMQ (no libzmq system dependency). We only need the PUSH socket
# over TCP to feed commands to lekiwi_host, and tokio to match Tauri's runtime.
zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "tcp-transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
# Leader-arm serial (Feetech STS3215 bus on a local USB CDC port).
serialport = { version = "4", default-features = false }

[profile.release]
strip = true
lto = true
